templates/grafana_template_v2.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for
        container mark-walle-grafana; cpu, memory limit for container mark-walle-grafana'
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: mark-walle-grafana
      openshift.io/deployment.name: mark-walle-grafana-1
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: 2019-05-28T16:58:33Z
    generateName: mark-walle-grafana-1-
    labels:
      app: mark-walle-grafana
      deployment: mark-walle-grafana-1
      deploymentconfig: mark-walle-grafana
    name: mark-walle-grafana-1-8vvmt
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: mark-walle-grafana-1
      uid: ce8374b8-8169-11e9-bf26-0050568379a2
    resourceVersion: "796396410"
    selfLink: /api/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/pods/mark-walle-grafana-1-8vvmt
    uid: d394df8c-8169-11e9-8dc7-0050568348cc
  spec:
    containers:
    - image: grafana/grafana@sha256:ced97851c89ca7d1e67a43aabbe05452e144a9bc9ffc63d2220dc2f37fdc1a71
      imagePullPolicy: IfNotPresent
      name: mark-walle-grafana
      ports:
      - containerPort: 3000
        protocol: TCP
      resources:
        limits:
          cpu: 250m
          memory: 1Gi
        requests:
          cpu: 100m
          memory: 256Mi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1007330000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /etc/grafana/provisioning/dashboards
        name: volume-oug67
      - mountPath: /etc/grafana/provisioning/datasources/
        name: volume-dgx1r
      - mountPath: /var/lib/grafana/dashboards/
        name: volume-lo8ch
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-tvw7w
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-p775t
    nodeName: ociopf-p-187.dmz
    nodeSelector:
      region: app
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1007330000
      seLinuxOptions:
        level: s0:c86,c10
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    volumes:
    - configMap:
        defaultMode: 420
        name: markwalle-grafana-dashboard-providers
      name: volume-oug67
    - configMap:
        defaultMode: 420
        name: markwalle-grafana-datasources
      name: volume-dgx1r
    - configMap:
        defaultMode: 420
        name: markwalle-grafana-simple-dashboard
      name: volume-lo8ch
    - name: default-token-tvw7w
      secret:
        defaultMode: 420
        secretName: default-token-tvw7w
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: 2019-05-28T16:58:33Z
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: 2019-05-28T16:58:52Z
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: null
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: 2019-05-28T16:58:33Z
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: docker://49a6a45454edc056d36409268c2a836652e32005b1e74b4c5e4b808036b7523c
      image: sha256:6441ff99cd25bed4f3009d9d3bbd8342cd0626881301fddee457fac18b88de1d
      imageID: docker-pullable://docker.io/grafana/grafana@sha256:ced97851c89ca7d1e67a43aabbe05452e144a9bc9ffc63d2220dc2f37fdc1a71
      lastState: {}
      name: mark-walle-grafana
      ready: true
      restartCount: 0
      state:
        running:
          startedAt: 2019-05-28T16:58:46Z
    hostIP: 142.34.143.173
    phase: Running
    podIP: 172.51.76.13
    qosClass: Burstable
    startTime: 2019-05-28T16:58:33Z
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2019-05-28 16:58:52 +0000 UTC
      openshift.io/deployer-pod.created-at: 2019-05-28 16:58:24 +0000 UTC
      openshift.io/deployer-pod.name: mark-walle-grafana-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: mark-walle-grafana
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"apps.openshift.io/v1","metadata":{"name":"mark-walle-grafana","namespace":"s4g19x-mark-walle-openshift201-may2019-dev","selfLink":"/apis/apps.openshift.io/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/deploymentconfigs/mark-walle-grafana","uid":"cdc6564f-8169-11e9-bf26-0050568379a2","resourceVersion":"796395944","generation":2,"creationTimestamp":"2019-05-28T16:58:23Z","labels":{"app":"mark-walle-grafana"},"annotations":{"kubectl.kubern [...]
    creationTimestamp: 2019-05-28T16:58:24Z
    generation: 2
    labels:
      app: mark-walle-grafana
      openshift.io/deployment-config.name: mark-walle-grafana
    name: mark-walle-grafana-1
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: mark-walle-grafana
      uid: cdc6564f-8169-11e9-bf26-0050568379a2
    resourceVersion: "796396470"
    selfLink: /api/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/replicationcontrollers/mark-walle-grafana-1
    uid: ce8374b8-8169-11e9-bf26-0050568379a2
  spec:
    replicas: 1
    selector:
      app: mark-walle-grafana
      deployment: mark-walle-grafana-1
      deploymentconfig: mark-walle-grafana
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: mark-walle-grafana
          openshift.io/deployment.name: mark-walle-grafana-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: mark-walle-grafana
          deployment: mark-walle-grafana-1
          deploymentconfig: mark-walle-grafana
      spec:
        containers:
        - image: grafana/grafana@sha256:ced97851c89ca7d1e67a43aabbe05452e144a9bc9ffc63d2220dc2f37fdc1a71
          imagePullPolicy: IfNotPresent
          name: mark-walle-grafana
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/grafana/provisioning/dashboards
            name: volume-oug67
          - mountPath: /etc/grafana/provisioning/datasources/
            name: volume-dgx1r
          - mountPath: /var/lib/grafana/dashboards/
            name: volume-lo8ch
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: markwalle-grafana-dashboard-providers
          name: volume-oug67
        - configMap:
            defaultMode: 420
            name: markwalle-grafana-datasources
          name: volume-dgx1r
        - configMap:
            defaultMode: 420
            name: markwalle-grafana-simple-dashboard
          name: volume-lo8ch
  status:
    availableReplicas: 1
    fullyLabeledReplicas: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"},"labels":{"app":"mark-walle-grafana"},"name":"mark-walle-grafana","namespace":"s4g19x-mark-walle-openshift201-may2019-dev"},"spec":{"clusterIP":"172.50.197.54","ports":[{"name":"3000-tcp","port":3000,"protocol":"TCP","targetPort":3000}],"selector":{"app":"mark-walle-grafana","deploymentconfig":"mark-walle-grafana"},"sessionAffinity":"None","type":"ClusterIP"}}
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2019-05-28T16:58:23Z
    labels:
      app: mark-walle-grafana
    name: mark-walle-grafana
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    resourceVersion: "796395913"
    selfLink: /api/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/services/mark-walle-grafana
    uid: cdb8ba51-8169-11e9-bf26-0050568379a2
  spec:
    clusterIP: 172.50.197.54
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: mark-walle-grafana
      deploymentconfig: mark-walle-grafana
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"},"generation":8,"labels":{"app":"mark-walle-grafana"},"name":"mark-walle-grafana","namespace":"s4g19x-mark-walle-openshift201-may2019-dev"},"spec":{"replicas":1,"revisionHistoryLimit":10,"selector":{"app":"mark-walle-grafana","deploymentconfig":"mark-walle-grafana"},"strategy":{"activeDeadlineSeconds":21600,"resources":{},"rollingParams":{"intervalSecond [...]
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: 2019-05-28T16:58:23Z
    generation: 2
    labels:
      app: mark-walle-grafana
    name: mark-walle-grafana
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    resourceVersion: "796396475"
    selfLink: /apis/apps.openshift.io/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/deploymentconfigs/mark-walle-grafana
    uid: cdc6564f-8169-11e9-bf26-0050568379a2
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: mark-walle-grafana
      deploymentconfig: mark-walle-grafana
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: mark-walle-grafana
          deploymentconfig: mark-walle-grafana
      spec:
        containers:
        - image: grafana/grafana@sha256:ced97851c89ca7d1e67a43aabbe05452e144a9bc9ffc63d2220dc2f37fdc1a71
          imagePullPolicy: IfNotPresent
          name: mark-walle-grafana
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/grafana/provisioning/dashboards
            name: volume-oug67
          - mountPath: /etc/grafana/provisioning/datasources/
            name: volume-dgx1r
          - mountPath: /var/lib/grafana/dashboards/
            name: volume-lo8ch
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: markwalle-grafana-dashboard-providers
          name: volume-oug67
        - configMap:
            defaultMode: 420
            name: markwalle-grafana-datasources
          name: volume-dgx1r
        - configMap:
            defaultMode: 420
            name: markwalle-grafana-simple-dashboard
          name: volume-lo8ch
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - mark-walle-grafana
        from:
          kind: ImageStreamTag
          name: mark-walle-grafana:6.2.0
          namespace: s4g19x-mark-walle-openshift201-may2019-dev
        lastTriggeredImage: grafana/grafana@sha256:ced97851c89ca7d1e67a43aabbe05452e144a9bc9ffc63d2220dc2f37fdc1a71
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2019-05-28T16:58:52Z
      lastUpdateTime: 2019-05-28T16:58:52Z
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: 2019-05-28T16:58:33Z
      lastUpdateTime: 2019-05-28T16:58:56Z
      message: replication controller "mark-walle-grafana-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"image.openshift.io/v1","kind":"ImageStream","metadata":{"annotations":{"openshift.io/generated-by":"OpenShiftNewApp","openshift.io/image.dockerRepositoryCheck":"2019-05-27T19:23:32Z"},"generation":2,"labels":{"app":"mark-walle-grafana"},"name":"mark-walle-grafana","namespace":"s4g19x-mark-walle-openshift201-may2019-dev"},"spec":{"lookupPolicy":{"local":false},"tags":[{"annotations":{"openshift.io/imported-from":"grafana/grafana:6.2.0"},"from":{"kind":"DockerImage","name":" [...]
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: 2019-05-27T19:23:32Z
    creationTimestamp: 2019-05-28T16:58:23Z
    generation: 2
    labels:
      app: mark-walle-grafana
    name: mark-walle-grafana
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    resourceVersion: "796396579"
    selfLink: /apis/image.openshift.io/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/imagestreams/mark-walle-grafana
    uid: cdd4dc36-8169-11e9-bf26-0050568379a2
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: grafana/grafana:6.2.0
      from:
        kind: DockerImage
        name: grafana/grafana:6.2.0
      generation: 2
      importPolicy: {}
      name: 6.2.0
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: docker-registry.default.svc:5000/s4g19x-mark-walle-openshift201-may2019-dev/mark-walle-grafana
    tags:
    - items:
      - created: 2019-05-28T16:58:24Z
        dockerImageReference: grafana/grafana@sha256:ced97851c89ca7d1e67a43aabbe05452e144a9bc9ffc63d2220dc2f37fdc1a71
        generation: 2
        image: sha256:ced97851c89ca7d1e67a43aabbe05452e144a9bc9ffc63d2220dc2f37fdc1a71
      tag: 6.2.0
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"openshift.io/host.generated":"true"},"labels":{"app":"mark-walle-grafana"},"name":"mark-walle-grafana","namespace":"s4g19x-mark-walle-openshift201-may2019-dev"},"spec":{"host":"mark-walle-grafana-s4g19x-mark-walle-openshift201-may2019-dev.pathfinder.gov.bc.ca","port":{"targetPort":"3000-tcp"},"to":{"kind":"Service","name":"mark-walle-grafana","weight":100},"wildcardPolicy":"None"},"status":{"ingress":[{"cond [...]
      openshift.io/host.generated: "true"
    creationTimestamp: 2019-05-28T16:58:23Z
    labels:
      app: mark-walle-grafana
    name: mark-walle-grafana
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    resourceVersion: "796395928"
    selfLink: /apis/route.openshift.io/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/routes/mark-walle-grafana
    uid: cde3edcc-8169-11e9-bf26-0050568379a2
  spec:
    host: mark-walle-grafana-s4g19x-mark-walle-openshift201-may2019-dev.pathfinder.gov.bc.ca
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: mark-walle-grafana
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2019-05-28T16:58:23Z
        status: "True"
        type: Admitted
      host: mark-walle-grafana-s4g19x-mark-walle-openshift201-may2019-dev.pathfinder.gov.bc.ca
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  data:
    dashboards.yml: "apiVersion: 1\n\nproviders:\n  # <string> provider name\n- name:
      'default'\n  # <int> org id. will default to orgId 1 if not specified\n  orgId:
      1\n  # <string, required> name of the dashboard folder. Required\n  folder:
      ''\n  # <string> folder UID. will be automatically generated if not specified\n
      \ folderUid: ''\n  # <string, required> provider type. Required\n  type: file\n
      \ # <bool> disable dashboard deletion\n  disableDeletion: false\n  # <bool>
      enable dashboard editing\n  editable: true\n  # <int> how often Grafana will
      scan for changed dashboards\n  updateIntervalSeconds: 10  \n  options:\n    #
      <string, required> path to dashboard files on disk. Required\n    path: /var/lib/grafana/dashboards"
  kind: ConfigMap
  metadata:
    creationTimestamp: 2019-05-27T21:18:02Z
    labels:
      app: mark-walle-grafana
    name: markwalle-grafana-dashboard-providers
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    resourceVersion: "796412683"
    selfLink: /api/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/configmaps/markwalle-grafana-dashboard-providers
    uid: e943d3d6-80c4-11e9-8dc7-0050568348cc
- apiVersion: v1
  data:
    datasources.yml: "  # config file version\n  apiVersion: 1\n\n  datasources:\n
      \ - name: Prometheus\n    type: prometheus\n    access: proxy\n    orgId: 1\n
      \   url: http://mark-walle-prometheus:80  \n    isDefault: true\n    version:
      1\n    editable: true\n  - name: Loki\n    type: loki\n    orgId: 1\n    access:
      proxy\n    url: http://markwalle-loki:3100  \n    jsonData:\n        maxLines:
      1000"
  kind: ConfigMap
  metadata:
    creationTimestamp: 2019-05-27T21:23:16Z
    labels:
      app: mark-walle-grafana
    name: markwalle-grafana-datasources
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    resourceVersion: "796412863"
    selfLink: /api/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/configmaps/markwalle-grafana-datasources
    uid: a438ff52-80c5-11e9-8dc7-0050568348cc
- apiVersion: v1
  data:
    simple_dashboard.json: |-
      {
        "annotations": {
          "list": [
            {
              "builtIn": 1,
              "datasource": "-- Grafana --",
              "enable": true,
              "hide": true,
              "iconColor": "rgba(0, 211, 255, 1)",
              "name": "Annotations & Alerts",
              "type": "dashboard"
            }
          ]
        },
        "editable": true,
        "gnetId": null,
        "graphTooltip": 0,
        "id": 1,
        "links": [],
        "panels": [
          {
            "cacheTimeout": null,
            "colorBackground": false,
            "colorValue": false,
            "colors": [
              "#299c46",
              "rgba(237, 129, 40, 0.89)",
              "#d44a3a"
            ],
            "format": "none",
            "gauge": {
              "maxValue": 100,
              "minValue": 0,
              "show": false,
              "thresholdLabels": false,
              "thresholdMarkers": true
            },
            "gridPos": {
              "h": 9,
              "w": 12,
              "x": 0,
              "y": 0
            },
            "id": 2,
            "interval": null,
            "links": [],
            "mappingType": 1,
            "mappingTypes": [
              {
                "name": "value to text",
                "value": 1
              },
              {
                "name": "range to text",
                "value": 2
              }
            ],
            "maxDataPoints": 100,
            "nullPointMode": "connected",
            "nullText": null,
            "options": {},
            "postfix": "",
            "postfixFontSize": "50%",
            "prefix": "",
            "prefixFontSize": "50%",
            "rangeMaps": [
              {
                "from": "null",
                "text": "N/A",
                "to": "null"
              }
            ],
            "sparkline": {
              "fillColor": "rgba(31, 118, 189, 0.18)",
              "full": false,
              "lineColor": "rgb(31, 120, 193)",
              "show": false
            },
            "tableColumn": "",
            "targets": [
              {
                "expr": "sum(up)",
                "format": "time_series",
                "intervalFactor": 1,
                "refId": "A"
              }
            ],
            "thresholds": "",
            "timeFrom": null,
            "timeShift": null,
            "title": "Total Pods Watched (Prometheus)",
            "type": "singlestat",
            "valueFontSize": "80%",
            "valueMaps": [
              {
                "op": "=",
                "text": "N/A",
                "value": "null"
              }
            ],
            "valueName": "avg"
          }
        ],
        "schemaVersion": 18,
        "style": "dark",
        "tags": [],
        "templating": {
          "list": []
        },
        "time": {
          "from": "now-6h",
          "to": "now"
        },
        "timepicker": {
          "refresh_intervals": [
            "5s",
            "10s",
            "30s",
            "1m",
            "5m",
            "15m",
            "30m",
            "1h",
            "2h",
            "1d"
          ],
          "time_options": [
            "5m",
            "15m",
            "1h",
            "6h",
            "12h",
            "24h",
            "2d",
            "7d",
            "30d"
          ]
        },
        "timezone": "",
        "title": "Sample Dashboard",
        "uid": "jex27gGZz",
        "version": 1
      }
  kind: ConfigMap
  metadata:
    creationTimestamp: 2019-05-27T21:24:17Z
    labels:
      app: mark-walle-grafana
    name: markwalle-grafana-simple-dashboard
    namespace: s4g19x-mark-walle-openshift201-may2019-dev
    resourceVersion: "796413163"
    selfLink: /api/v1/namespaces/s4g19x-mark-walle-openshift201-may2019-dev/configmaps/markwalle-grafana-simple-dashboard
    uid: c89afa6f-80c5-11e9-8dc7-0050568348cc
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
